--- a/JsTest/index.html
+++ b/JsTest/index.html
@@ -5,10 +5,18 @@
     <title>Домашка #57</title>
 </head>
 <body>
+
+
+<div id="string-1">Ядра в вёдра, выдру в тундру!</div>
+<div id="string-2">Выдрав с выдры в тундре гетры</div>
+<div id="string-3">В недрах тундры, выдры в гетрах </div>
+<div id="string-4">Вытру гетрой выдре морду </div>
+<div id="string-5">Тырят в вёдра ядра кедров!</div>
+<div id="string-6">Вытру выдрой ядра кедров</div>
+
+
+
 <!--<input type="button" class="btn" value="Click me!" />-->
-<script src="script.js">
-
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
