--- a/JsTest/index.html
+++ b/JsTest/index.html
@@ -15,6 +15,14 @@
 <div id="string-6">Вытру выдрой ядра кедров</div>
 
 
+<div class=”element”>Element 1</div>
+<div class=”element”>Element 2</div>
+<div class=”element”>Element 3</div>
+<div class=”element”>Element 4</div>
+<div class=”element”>Element 5</div>
+<div class=”element”>Element 6</div>
+
+
 
 <!--<input type="button" class="btn" value="Click me!" />-->
 <script src="script.js"></script>
