--- a/JsTest/index.html
+++ b/JsTest/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Домашка #57</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
 
-
+<p>К заданию 5</p>
 <div id="string-1">Ядра в вёдра, выдру в тундру!</div>
 <div id="string-2">Выдрав с выдры в тундре гетры</div>
 <div id="string-3">В недрах тундры, выдры в гетрах </div>
@@ -15,6 +16,7 @@
 <div id="string-6">Вытру выдрой ядра кедров</div>
 <br/>
 
+<p>К заданию 6</p>
 <div class="element">Element 1</div>
 <div class="element">Element 2</div>
 <div class="element">Element 3</div>
@@ -23,9 +25,24 @@
 <div class="element">Element 6</div>
 <br/>
 
-<div class="container"></div>
+<p>К заданию 7</p>
+<div class="container7"></div>
+<br/>
+
+<p>К заданию 8</p>
+<div class="container8"></div>
+<button onclick="createElementsInsideAndButton()" type="button">+</button>
 
 
+<p>К заданию 9</p>
+<!--<div class="container"></div>-->
+<!--<p onclick="createTime()" type="button">Внимание сейчас создасться div</p>-->
+<!--<button onclick="stop" type="button">Stop</button>-->
+
+<div class="container9"></div>
+<p onclick="createTime()" type="button">Внимание сейчас создасться div</p>
+
+<br/>
 
 <script src="script.js"></script>
 <script src="jquery.js"></script>
